fixed button sized on mobile view

--- a/public/styles.css
+++ b/public/styles.css
@@ -78,6 +78,9 @@ a.login {
 
 .up-btn {
   height: 75px;
+  width: 275px;
   font-size: 36px;
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
